[package]
name = "procdog"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bitflags = "2.11.0"
libc = "0.2.182"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

[lib]
name = "procdog"
path = "src/lib.rs"

[[bin]]
name = "procdog"
path = "src/main.rs"
